--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>Dit is een andere titel, die gaat niet over Pim</h2>
+    <ul>
+        <li>Dit is een andere titel</li>
+    </ul>
 </body>
 </html>
