--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h2>Dit is een andere titel, die gaat niet over Pim</h2>
     <ul>
         <li>Dit is een andere titel</li>
+        <li>Dit is een andere titel2</li>
+        <li>Dit is titel3</li>
     </ul>
 </body>
 </html>
